--- a/accordian.scss
+++ b/accordian.scss
@@ -4,3 +4,12 @@
 @import "normalize";
 $fa-font-path: "//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts";
 @import "font-awesome";
+
+
+html {
+  background-color: blue;
+}
+
+body {
+  font-size: 40px;
+}
