--- a/sass/accordian.scss
+++ b/sass/accordian.scss
@@ -6,34 +6,64 @@ $fa-font-path: "//netdna.bootstrapcdn.com/font-awesome/4.3.0/fonts";
 @import "font-awesome";
 
 
-li {
-  list-style: none;
-}
-
 .accordion {
 display: flex;
 flex-direction: column;
 list-style: none;
-padding-left: none;
+padding-left: 0;
 border: solid grey 3px;
 width: 400px;
+margin-bottom: 0;
+margin-top: 0;
 
 }
 
-.accordion__bar {
-padding: 10px;
+.accordian__bar-list-a {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  list-style: none;
+  padding-left: 0;
+  flex: 1;
+  border: solid grey 1px;
+}
+
+.accordion__bar-list {
+  padding-left: 0;
+}
+
+.number-right {
+  float: right;
+  margin-right: 20px;
+  border: solid grey 1px;
+  border-radius: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.number-left{
+  float: left;
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
 .accordion__bar span {
   float: right;
-  margin: 0;
+  margin-right: 20px;
+  border: solid grey 1px;
+  border-radius: 10px;
+  padding-left: 10px;
   padding-right: 10px;
 }
 
-.accordion__bar-list  span {
+.accordion__bar .fa {
+  float: left;
+  padding-right: 10px;
+  padding-left: 10px;
 
 }
-
-.accordion__bar-list li {
-
+.accordion__bar{
+  border: solid grey 1px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin: 0;
 }
