fixed keyboard html and css for js

--- a/sass/accordian.scss
+++ b/sass/accordian.scss
@@ -33,7 +33,7 @@ margin-top: 0;
   padding-left: 0;
   background: $brand_light_grey;
   color: $brand_inner_text;
-  // display: none;
+  display: none;
 }
 
 .number-right {
