--- a/sass/keyboard.scss
+++ b/sass/keyboard.scss
@@ -1,9 +1,10 @@
-.input-text {
+textarea {
   width: 900px;
   height: 300px;
   background-color: white;
   border: solid grey 3px;
-  margin: auto;
+  margin-left: 173px;
+
 }
 .keyboard {
   display: flex;
@@ -35,6 +36,33 @@
   padding: 2px;
   background-color: white;
 }
+.keyboard-button_return {
+  flex: 2;
+  border: solid grey 2px;
+  text-align: center;
+  line-height: 40px;
+  padding: 2px;
+  background-color: white;
+}
+.keyboard-button_delete {
+  flex: 2;
+  border: solid grey 2px;
+  text-align: center;
+  line-height: 40px;
+  padding: 2px;
+  background-color: white;
+}
+.keyboard-button_tab {
+  flex: 2;
+  border: solid grey 2px;
+  text-align: center;
+  line-height: 40px;
+  padding: 2px;
+  background-color: white;
+}
+
+
+
 .keyboard-button_space {
   border: solid grey 2px;
   text-align: center;
