--- a/sass/keyboard.scss
+++ b/sass/keyboard.scss
@@ -1,9 +1,11 @@
 textarea {
+  display: block;
   width: 900px;
   height: 300px;
   background-color: white;
   border: solid grey 3px;
-  margin-left: 173px;
+  margin: auto;
+
 
 }
 .keyboard {
